microservice/infra-gateway/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ${APP_NAME}
  name: ${APP_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP_NAME}
  strategy: {}
  template:
    metadata:
      labels:
        app: ${APP_NAME}
    spec:
      containers:
        - image: ts00328685/heloword-${APP_NAME}:${MAJOR_VERSION}.${MINOR_VERSION}
          name: ${APP_NAME}
          resources: {}
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9487
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9487
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ${APP_NAME}
  name: ${APP_NAME}
spec:
  ports:
    - port: 9487
      protocol: TCP
      targetPort: 9487
  selector:
    app: ${APP_NAME}
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
  name: ${APP_NAME}
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: ${APP_NAME}
                port:
                  number: 9487
            path: /${APP_NAME}/v${MAJOR_VERSION}(/|$)(.*)
            pathType: Prefix
